# diocesan-vitality

./: ';lkob0o3p;lm '    .bandit  .env.example  .env:Zone.Identifier  .flake8  .gitignore  .pre-commit-config.yaml  .releaserc.json  02_Find_Parish_Directories (older but working).ipynb  02_Find_Parish_Directories (older but working).py  AUTHENTICATION.md  Adoration_and_Reconciliation_Measurement_V3.ipynb  BACKUP_RESTORE.md  Build Dioceses Database.ipynb  Build Dioceses Database.py  Build_Parishes_Database.ipynb  Build_Parishes_Database_From_Map.ipynb  Build_Parishes_Database_From_Table.ipynb  Build_Parishes_Database_Using_AgenticAI.ipynb  Build_Parishes_Datavase.ipynb  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONVERSATION_SUMMARY.md  Clone_and_Update_GitHub_data.ipynb  DEPLOYMENT.md  DEPLOY_SECURITY_FIX.md  DOCUMENTATION_CLEANUP_RECOMMENDATIONS.md  Dockerfile.pipeline  ENVIRONMENT_URLS.md  Enhanced_Pattern_Based_Parish_Extractor (2).ipynb  Enhanced_Pattern_Based_Parish_Extractor.ipynb  Extract_Parish_From_Diocese_Directory.py  Find_Adoration_and_Reconciliation_information_for_a_Parish.ipynb  Find_Parish_Directory.ipynb  Find_Parish_Directory.py  INVESTIGATION_106.md  ISSUE_106_COMMENT.md  LICENSE  LOCAL_DEVELOPMENT.md  (+92 more)
.claude/: CLAUDE.md  settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
backend/: .env.example  DEPLOYMENT_CHECKLIST.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  main.py  requirements.txt  test_integration.py  verify_implementation.py
config/: ai_config.yaml  ai_config.yaml.backup
core/: adaptive_timeout_manager.py  ai_auth_manager.py  ai_config.py  ai_content_analyzer.py  ai_model_factory.py  async_driver.py  async_parish_extractor.py  circuit_breaker.py  db.py  db_batch_operations.py  deduplication.py  diocese_profiles.py  distributed_work_coordinator.py  driver.py  dynamic_content_engine.py  http_client.py  (+19 more)
(+397 files in other folders)
